Change layout to 2 rows; hide overflow to prevent flash of white content during image loading (fixes #2)

--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,27 @@
   --color-border-active: #aaa; /* fc0 */
 }
 
+/* prevent flash of white content when navigating thumbnails */
+html,
+body {
+  height: 100vh;
+  overflow: hidden;
+}
+
 body {
   margin: 0;
 }
 
 .layout {
   display: grid;
-  grid-template-rows: auto auto 36rem; /* minmax(10rem, 1fr); */
+  grid-template-rows: 70vh 30vh;
   height: 100vh;
+}
+
+/* prevent flash of white content when navigating thumbnails */
+.layout,
+.layout > * {
+  overflow: hidden;
 }
 
 .images {
